--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,5 @@
 {
-  "root": "client",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
